--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,48 +11,52 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      # Checkout Repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Install .NET SDK
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.0.x'
 
+      # Restore NuGet packages
       - name: Restore dependencies
         run: dotnet restore
 
+      # Build the entire solution (including WinForms)
       - name: Build solution
         run: dotnet build --no-restore --configuration Release
 
-      #################################################
-      #          Run tests → TRX file output          #
-      #################################################
-      - name: Run tests
+      ##############################################################
+      #                   Run Unit & Integration Tests             #
+      ##############################################################
+      - name: Run tests (Create TRX output)
         run: |
           dotnet test tests/ContactManager.Tests/ContactManager.Tests.csproj `
-            --no-build `
             --configuration Release `
+            --no-build `
             --logger "trx;LogFileName=TestResults.trx"
 
-      #################################################
-      #      Install TRX → HTML converter tool        #
-      #################################################
+      ##############################################################
+      #                   Install TRX → HTML Converter             #
+      ##############################################################
       - name: Install trxlog2html
         run: dotnet tool install --global trxlog2html --version 1.0.4
 
-      #################################################
-      # Convert TRX → HTML using trxlog2html          #
-      #################################################
+      ##############################################################
+      #              Convert TRX file into HTML Test Report        #
+      ##############################################################
       - name: Convert TRX to HTML report
         run: |
           trxlog2html `
-            --input TestResults.trx `
-            --output TestReport.html
+            --inputFilePath TestResults.trx `
+            --outputFilePath TestReport.html
 
-      #################################################
-      #   Upload HTML Test Report as GitHub Artifact  #
-      #################################################
+      ##############################################################
+      #               Upload HTML Test Report as Artifact          #
+      ##############################################################
       - name: Upload HTML Test Report
         uses: actions/upload-artifact@v4
         with:
