--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,36 +19,45 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Restore dependencies
+      - name: Restore
         run: dotnet restore
 
       - name: Build
         run: dotnet build --no-restore --configuration Release
 
-      - name: Run Tests (MTP/TRX)
+      - name: Run Tests (TRX)
         run: |
           dotnet test tests/ContactManager.Tests/ContactManager.Tests.csproj `
             --no-build `
             --configuration Release `
             --logger "trx;LogFileName=TestResults.trx"
 
-      # -----------------------------------------------
-      # Install MTP TRX → HTML Converter
-      # -----------------------------------------------
-      - name: Install MTP TRX Report Converter
-        run: dotnet tool install -g Microsoft.TestPlatform.TrxReportConverter
+      # -------------------------------------------------
+      # Install ReportGenerator
+      # -------------------------------------------------
+      - name: Install ReportGenerator
+        run: dotnet tool install -g dotnet-reportgenerator-globaltool
 
-      - name: Convert TRX to HTML
-        run: trxreportconverter -t html -o TestReport.html **/TestResults.trx
+      # -------------------------------------------------
+      # Generate HTML Report from TRX
+      # -------------------------------------------------
+      - name: Generate HTML report
+        run: reportgenerator -reports:**/TestResults.trx -targetdir:TestReport -reporttypes:Html
 
-      - name: Convert HTML to PDF
-        run: wkhtmltopdf TestReport.html TestReport.pdf
+      # -------------------------------------------------
+      # Convert HTML → PDF
+      # -------------------------------------------------
+      - name: Convert to PDF
+        run: wkhtmltopdf TestReport/index.html TestReport.pdf
 
-      - name: Upload Artifacts
+      # -------------------------------------------------
+      # Upload artifacts
+      # -------------------------------------------------
+      - name: Upload Reports
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: |
-            TestReport.html
+            TestReport/**
             TestReport.pdf
             **/*.trx
